--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "dev": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
+    "babel-loader": "^8.0.0-beta.4",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
     "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.10",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
